[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "conduit"
version = "0.0.1"
description = "AI framework for fast and easy development"
readme = "README.md"
license = "MIT"
authors = ["Tyler Hanson <tylerhanson921@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12.6,<4.0"
requests = ">=2.31.0"

transformers = "4.57.3"               # or ">=4.57.3,<5.0.0" if you like
huggingface-hub = ">=0.34.0,<1.0.0"   # ✅ correct name + compatible range

cryptography = ">=42.0.0"
tqdm = ">=4.0.0"
jinja2 = ">=3.1.0"
openai = ">=2.3.0"
dacite = "^1.9.2"
sqlmodel = "^0.0.27"
psycopg2-binary = "^2.9.11"
docker = "^7.1.0"
psutil = "^7.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.0"
types-requests = "*"
types-tqdm = "*"
pytest = "^8.0"
